--- a/lbstatusbarlib/build.gradle
+++ b/lbstatusbarlib/build.gradle
@@ -27,3 +27,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
 }
+
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.lib739449500'
