--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,17 @@
 
 buildscript {
     repositories {
-        google()
-        jcenter()
-        maven { url 'https://jitpack.io' }
+       google()
+       jcenter()
+       maven { url 'https://jitpack.io' }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
+        //上传库到jitpack和jenter需要加
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        //上传库到jenter还需要加下面的
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,7 +23,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
+         maven { url 'https://jitpack.io' }
         
     }
 }
