--- a/lbstatusbarlib/build.gradle
+++ b/lbstatusbarlib/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 
 //上传库到jitpack和jenter需要加
 apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.lib739449500'
+group='com.aa.bb'
 
 //上传库到jenter还需要加下面的
 apply plugin: 'com.jfrog.bintray'
